--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "csrf-csrf": "^2.3.0",
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "eslint-config-next": "13.4.5",
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
     "@html-eslint/parser": "^0.19.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
